# ALFRED

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  eigenvalue.mac  main.cc
detectors_construction/: Godiva.cc  Jezebel.cc  treat_simple.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
scripts/: energy_deposition.py  keff.py
sources/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
